apps/base/resume/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: resume
  labels:
    podmonitorscrape: "true"
