apps/base/resume/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: resume
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
        app.kubernetes.io/name: resume
        app.kubernetes.io/instance: resume
    spec:
      containers:
        - name: resume
          image: docker.io/amruthpillai/reactive-resume:v5.0.11
          ports:
            - containerPort: 3000
              name: http-resume
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: 1
              memory: "512Mi"

        - name: chromium
          image: ghcr.io/browserless/chromium:v2.42.0
          ports:
            - containerPort: 4000
              name: http-chromium
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: 2
              memory: "1Gi"
