apps/base/resume/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume
  namespace: resume
spec:
  selector:
    app: resume
  ports:
    - name: http-resume
      protocol: TCP
      port: 3000
      targetPort: http-resume
