apps/base/resume/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume
  namespace: resume
spec:
  ingressClassName: traefik
  rules:
    - host: resume.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume
                port:
                  name: http-resume
