apps/base/resume/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resume-route
  namespace: resume
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - resume.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: resume
          port: 3000
